--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.5",
+    "mongodb": "^2.2.33",
     "swig": "^1.4.2"
   }
 }
